[package]
name = "mandelbrowser"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
vulkano-util = "0.33.0"
winit = "0.28.6"

image = "0.24"